--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy==1.22.0
-requests==2.32.2
-scipy==1.10.0
-tqdm==4.66.3
-xgboost==1.2.0
-scikit_learn==0.23.2
+numpy>=1.22
+requests>=2.32
+scipy>=1.10
+tqdm>=4.66
+xgboost>=1.7
+scikit-learn>=1.2
